update url with ranking filter

--- a/scraping notebook.ipynb
+++ b/scraping notebook.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "# Making a request to the URL to get the entire HTML of the page\n",
     "\n",
-    "URL=\"https://www.hltv.org/stats/players\" # URL of the page to be scraped\n",
+    "URL=\"https://www.hltv.org/stats/players?rankingFilter=Top30&minMapCount=150\" # URL of the page to be scraped\n",
     "HEADER = {'User-Agent': 'Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.0.7) Gecko/2009021910 Firefox/3.0.7'} # This is used to prevent the website from blocking the scraper\n",
     "res = requests.get(URL, headers=HEADER) # This is the request to the URL with the headers passed in as a parameter\n",
     "res.status_code # This will return the status code of the request (200 if okay)"
