Completed the unfinished code in 'scraping notebook.ipynb' and saved it as 'Scrape_Data.csv'

--- a/scraping notebook.ipynb
+++ b/scraping notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 146,
    "id": "24ece33a",
    "metadata": {},
    "outputs": [],
@@ -11,15 +11,27 @@
     "\n",
     "import bs4    # BeautifulSoup is used to scrape websites by parsing the HTML\n",
     "import requests # Requests is used to make HTTP requests\n",
-    "import pandas as pd # Pandas is used to create \"dataframes\" which are used for data analysis"
+    "import pandas as pd # Pandas is used to create \"dataframes\" which are used for data analysis\n",
+    "import copy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 147,
    "id": "9c7fd6a2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "200"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Making a request to the URL to get the entire HTML of the page\n",
     "\n",
@@ -31,10 +43,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 148,
    "id": "b7046542",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('CS:GO Player statistics database | HLTV.org', 'RECENT ACTIVITY')"
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Parsing the HTML of the page\n",
     "\n",
@@ -45,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 149,
    "id": "3bf59aa4",
    "metadata": {},
    "outputs": [],
@@ -59,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 150,
    "id": "e5fa1788",
    "metadata": {},
    "outputs": [],
@@ -72,18 +95,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 151,
    "id": "9cf2cc7a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<thead>\n",
+       "<tr class=\"stats-table-row\">\n",
+       "<th class=\"playerCol\">Player</th>\n",
+       "<th class=\"teamCol\">Teams</th>\n",
+       "<th class=\"mapsCol\">Maps</th>\n",
+       "<th class=\"rounds-col gtSmartphone-only\">Rounds</th>\n",
+       "<th class=\"kdDiffCol\">K-D Diff</th>\n",
+       "<th class=\"kdCol\">K/D</th>\n",
+       "<th class=\"ratingCol\">Rating<span class=\"ratingDesc\">1.0</span></th>\n",
+       "</tr>\n",
+       "</thead>"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Checking out the header to see structure and number of columns in the\n",
-    "header "
+    "header"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 152,
    "id": "66ab0fa1",
    "metadata": {},
    "outputs": [],
@@ -95,23 +139,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 153,
    "id": "c8022a2f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<th class=\"playerCol\">Player</th>,\n",
+       " <th class=\"teamCol\">Teams</th>,\n",
+       " <th class=\"mapsCol\">Maps</th>,\n",
+       " <th class=\"rounds-col gtSmartphone-only\">Rounds</th>,\n",
+       " <th class=\"kdDiffCol\">K-D Diff</th>,\n",
+       " <th class=\"kdCol\">K/D</th>,\n",
+       " <th class=\"ratingCol\">Rating (1.0)</th>]"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Define the columns of the dataframe with meaningful names\n",
     "\n",
-    "# WRITE DOWN YOUR CODE HERE\n",
-    "############################\n",
+    "# Finding the headers of the table\n",
+    "headers = player_table.find('thead').find_all('th')\n",
+    "# Renaming the headers\n",
+    "headers[0].string = 'Player'\n",
+    "headers[1].string = 'Teams'\n",
+    "headers[2].string = 'Maps'\n",
+    "headers[3].string = 'Rounds'\n",
+    "headers[4].string = 'K-D Diff'\n",
+    "headers[5].string = 'K/D'\n",
+    "headers[6].string = 'Rating (1.0)'\n",
     "\n",
-    "\n",
-    "############################"
+    "headers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 154,
    "id": "7d3c34b6",
    "metadata": {},
    "outputs": [],
@@ -138,50 +206,45 @@
     "    #creating element\n",
     "    element={\n",
     "        # define the dictionary\n",
-    "        # WRITE DOWN YOUR CODE HERE\n",
-    "        ############################\n",
-    "\n",
-    "\n",
-    "        ############################\n",
+    "        'Name': name,\n",
+    "        'Teams': teams,\n",
+    "        'Maps': no_of_maps,\n",
+    "        'Rounds': no_of_rounds,\n",
+    "        'K-D Diff': kd_difference,\n",
+    "        'K/D': kd,\n",
+    "        'Rating (1.0)': hltv_rating\n",
     "    }\n",
-    "    #print(element)\n",
+    "    # print(element)\n",
     "    #appending element\n",
-    "    list.append(element)"
+    "    list.append(element)\n",
+    "    # print (list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 164,
    "id": "e8281596",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Convert List of Dictionaries to DataFrame\n",
-    "# WRITE DOWN YOUR CODE HERE\n",
-    "############################\n",
-    "\n",
-    "\n",
-    "############################"
+    "df = pd.DataFrame(list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 156,
    "id": "4cd6b6c2",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Convert the HLTV Rating to a float\n",
-    "# WRITE DOWN YOUR CODE HERE\n",
-    "############################\n",
-    "\n",
-    "\n",
-    "############################"
+    "df['Rating (1.0)'] = df['Rating (1.0)'].astype(float)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 157,
    "id": "07c07435",
    "metadata": {},
    "outputs": [],
@@ -192,39 +255,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 162,
    "id": "ac10aecc",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Format the Teams Played In a list\n",
-    "# WRITE DOWN YOUR CODE HERE\n",
-    "############################\n",
-    "\n",
-    "\n",
-    "############################"
+    "df['Teams'] = df['Teams'].apply(lambda x: ','.join(x))\n",
+    "df['Teams'] = df['Teams'].str.split(',')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 163,
    "id": "b949ce55",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Export the dataframe as a CSV/Excel file with index=False\n",
     "# path should be \"./\"\n",
-    "# WRITE DOWN YOUR CODE HERE\n",
-    "############################\n",
-    "\n",
-    "\n",
-    "############################"
+    "df.to_csv(\"./Scrape_Data.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f18ba8d6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -242,7 +306,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "81794d4967e6c3204c66dcd87b604927b115b27c00565d3d43f05ba2f3a2cb0d"
+    "hash": "441191bd059aa47c305636395a26980bf01a2bf2a50b7ff0b3681c7d0274b9f0"
    }
   }
  },
