Categorizing Player Roles

--- a/Notebooks/Player Roles.ipynb
+++ b/Notebooks/Player Roles.ipynb
@@ -37,6 +37,8 @@
     }
    ],
    "source": [
+    "import pandas as pd\n",
+    "\n",
     "# Load the dataset\n",
     "data = pd.read_csv('Updated_Scrape_Data.csv')\n",
     "\n",
